force-app/main/default/objects/IDR_Collections_Event__e/IDR_Collections_Event__e.object-meta.xml
<CustomObject>
    <description>This event is used to start and stop collections activity in downstream systems like CRDH, PCC etc.</description>
    <label>IDR Collections Event</label>
    <pluralLabel>IDR Collections Events</pluralLabel>
</CustomObject>