force-app/main/default/objects/IDR_Collections_Event__e/fields/IDR_Account_Details__c.field-meta.xml
<CustomField>
    <fullName>IDR_Account_Details__c</fullName>
    <description>Account details for which Collection activity needs to be stopped/resumed.</description>
    <label>Account Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>