force-app/main/default/objects/IDR_Collections_Event__e/fields/IDR_Complaint_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>IDR_Complaint_Case_Id__c</fullName>
    <description>Field to store salesforce case id which will be sent to mulesoft</description>
    <label>Sobject Case Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>