force-app/main/default/objects/IDR_Collections_Event__e/fields/IDR_Complaint_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>IDR_Complaint_Created_Date__c</fullName>
    <description>Created date of a Complaint</description>
    <label>Complaint Created Date</label>
    <type>Date</type>
</CustomField>