force-app/main/default/objects/IDR_Collections_Event__e/fields/IDR_Complaint_Number__c.field-meta.xml
<CustomField>
    <fullName>IDR_Complaint_Number__c</fullName>
    <description>Case Number of Complaint</description>
    <label>Complaint Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>