force-app/main/default/objects/IDR_Collections_Event__e/fields/IDR_Complaint_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>IDR_Complaint_Received_Date__c</fullName>
    <description>Datetime which complaint was recieved</description>
    <label>Complaint Received Date</label>
    <type>DateTime</type>
</CustomField>