force-app/main/default/objects/IDR_Collections_Event__e/fields/IDR_Complaint_Resolved_Date__c.field-meta.xml
<CustomField>
    <fullName>IDR_Complaint_Resolved_Date__c</fullName>
    <description>Closed/Resolved Date of a complaint</description>
    <label>Complaint Resolved Date</label>
    <type>Date</type>
</CustomField>