force-app/main/default/objects/IDR_Collections_Event__e/fields/IDR_Complaint_Status__c.field-meta.xml
<CustomField>
    <fullName>IDR_Complaint_Status__c</fullName>
    <description>Status of the complaint when collection flag was set</description>
    <label>Complaint Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>