force-app/main/default/objects/IDR_Collections_Event__e/fields/IDR_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>IDR_Customer_Number__c</fullName>
    <description>Customer number of the customer</description>
    <label>Customer Number</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>