force-app/main/default/objects/IDR_Collections_Event__e/fields/IDR_Email__c.field-meta.xml
<CustomField>
    <fullName>IDR_Email__c</fullName>
    <description>The email address of Complainant</description>
    <label>Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>