force-app/main/default/objects/IDR_Collections_Event__e/fields/IDR_First_Name__c.field-meta.xml
<CustomField>
    <fullName>IDR_First_Name__c</fullName>
    <description>First Name of Customer</description>
    <label>First Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>