force-app/main/default/objects/IDR_Collections_Event__e/fields/IDR_Hardship_Collection_Flag__c.field-meta.xml
<CustomField>
    <fullName>IDR_Hardship_Collection_Flag__c</fullName>
    <description>Flag to turn on and off the collection activity in downstream systems</description>
    <label>Hardship Collection Flag</label>
    <length>10</length>
    <type>Text</type>
</CustomField>