force-app/main/default/objects/IDR_Collections_Event__e/fields/IDR_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>IDR_Last_Name__c</fullName>
    <description>Last name of the complainant</description>
    <label>Last Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>