force-app/main/default/objects/IDR_Collections_Event__e/fields/IDR_Mobile__c.field-meta.xml
<CustomField>
    <fullName>IDR_Mobile__c</fullName>
    <description>Mobile number of Complainant</description>
    <label>Mobile</label>
    <length>20</length>
    <type>Text</type>
</CustomField>