force-app/main/default/objects/IDR_Collections_Event__e/fields/IDR_OCV_Id__c.field-meta.xml
<CustomField>
    <fullName>IDR_OCV_Id__c</fullName>
    <description>OCV Id of the customer</description>
    <label>OCV Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>