force-app/main/default/objects/IDR_Collections_Event__e/fields/IDR_Start_Tasks_Required__c.field-meta.xml
<CustomField>
    <fullName>IDR_Start_Tasks_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will notify Mulesoft whether to create a third party start collection task or not for the corresponding stop collection in Salesforce</description>
    <label>IDR Start Tasks Required</label>
    <type>Checkbox</type>
</CustomField>